# bens_ssr

./: CMakeLists.txt  README.md
data/man/: simplescreenrecorder.1
data/resources/: resources.qrc
src/: CMakeLists.txt  Global.h  Main.cpp
src/AV/Output/: OutputSettings.h  Synchronizer.cpp  Synchronizer.h
src/GUI/: MainWindow.cpp  MainWindow.h  PageInput.cpp  PageInput.h  PageOutput.cpp  PageOutput.h  PageRecord.cpp  PageRecord.h  PageWelcome.cpp  PageWelcome.h
src/common/: CommandLineOptions.cpp  CommandLineOptions.h
